wordpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:            
        - name: wordpress
          image: pogbia29/mywordpress
          ports:
          - containerPort: 80
          volumeMounts:
          - mountPath: /www/var/html
            name: wordpress-contents
      volumes:
      - name: wordpress-contents
        emptyDir: {}
