mysql_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  selector:
    app: mysql-sts
  ports:
  - name: mysql-svc
    port: 3306
    targetPort: 3306
